Merged revisions 656546,657465,657521,657921,660979,660998,661276,661310,661999,662009,662203,662417,662807,662991,663045,663493,664347,664349-664350,665691,665699,665740,665793,665995,666596,666967,667367,667831,667862,667864,667893,668177,668576,669423,669436,669835,670217,670222,670323,670325,670332,670335-670336,670341,670344,670401,670409,670411-670412,670422-670424,670492,670689,670723,670760-670761,670763,670765-670767,670770,670773,670777,671145,672010,672026,672495-672496,672499,672537,672539,672564-672565,672617-672618,672670,672833,674039,674043,674056,674065,674245,674267,674269,674272-674273,674276,674325,674468,674470-674471,674484,674486-674487 via svnmerge from https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk
................
  r656546 | adelmelle | 2008-05-15 09:33:19 +0100 (Thu, 15 May 2008) | 1 line
  
  Tweak: make sure the fo:flow's id is bound to the FObj
................
  r657465 | adelmelle | 2008-05-17 22:18:19 +0100 (Sat, 17 May 2008) | 1 line
  
  Corrected testcase: since the fo:flow's ID is correctly processed...
................
  r657521 | maxberger | 2008-05-18 10:39:03 +0100 (Sun, 18 May 2008) | 1 line
  
  Updated as per suggestions in bug 45019
................
  r657921 | spepping | 2008-05-19 20:02:18 +0100 (Mon, 19 May 2008) | 6 lines
  
  Added event TableEventProducer.forceNextColumnNumber when
  TableFObj.ColumnNumberPropertyMaker forces a zero or negative
  column-number property to the next available column, because this is a
  FOP extension. Fixed TableFObj.ColumnNumberPropertyMaker.make to
  really report a cell overlap event.
................
  r660979 | vhennebert | 2008-05-28 16:24:23 +0100 (Wed, 28 May 2008) | 3 lines
  
  Bugzilla 37579: added support for footnotes in lists and table bodies (not header nor footer).
  This is /not/ to be considered a final fix: similar code is duplicated over several classes (LineLayoutManager, ListItemLayoutManager and to less extent TableStepper). Footnotes should probably be